tests/rosetta/transpiler/Clojure/additive-primes.error
run error: exit status 1
WARNING: count already refers to: #'clojure.core/count in namespace: main, being replaced by: #'main/count
Additive primes less than 500:
Execution error (ExceptionInfo) at main/pad (additive-primes.clj:16).
return

Full report at:
/tmp/clojure-3860272391061110324.edn
